--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
     <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <link rel="preload" href="./fonts/fonts.css" as="style">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/colors.css">
+    <link rel="stylesheet" href="./styles/layout.css">
+    <link rel="stylesheet" href="./styles/theme-dark.css">
+    <link rel="stylesheet" href="./styles/theme-light.css">
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="site">
